# dailies-analyzer

./: README.org  csv_to_org.py  pyproject.toml
src/dailies_analyzer/: __init__.py  batch.py  cli.py  db.py  embeddings.py  extractor.py  models.py  parser.py  reports.py  stats.py  summarizer.py
