[project]
name = "dailies-analyzer"
version = "0.1.0"
description = "Analyze org-mode/gptel chat history for stats and insights"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "tiktoken>=0.5",
    "anthropic>=0.40",
    "numpy>=1.24",
    "mlx-embedding-models>=0.0.9",
    "transformers>=4.30,<5",
]

[project.scripts]
dailies = "dailies_analyzer.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dailies_analyzer"]

[tool.ruff]
line-length = 100
target-version = "py311"
